<resources>
    <string name="app_name"></string>
    <string name="tv_perfil">Informacion del perfil</string>
    <string name="et_nom_ape">Nombre y Apellidos</string>
    <string name="et_email">Email</string>
    <string name="et_numTelf">Número de teléfono</string>
    <string name="et_nomUsuario">Nombre de usuario</string>
    <string name="btn_guardar_perfil">Guardar</string>
    <string name="title_activity_comentarios">Comentarios</string>
    <string name="action_settings">Settings</string>
    <string name="tv_air_today">Air Today</string>
    <string name="tv_version">Version 1.0.0</string>
    <string name="tv_sugerencias">Envíanos tus sugerencias</string>
    <string name="tv_politica">Política de privacidad</string>
    <string name="tv_recomendar">Recomendar app</string>
    <string name="tv_redes">Síguenos en redes sociales:</string>
    <string name="title_activity_mapa">Map</string>
</resources>
